<resources>
    <string name="app_name">App1</string>
    <string name="login">login</string>
    <string name="homePageBackground">homePageBackground</string>
    <string name="this_is_iris_newest_app">This is Iris\' Newest App!!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_payment">Payment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_account">"Create Account"</string>
    <string name="enter_amount">enter amount</string>
    <string name="pay_now">Pay Now</string>
    <string name="make_a_payment">make a payment</string>
    <string name="chose_a_username">Chose a Username</string>
    <string name="select_your_game">Select your Game</string>
    <string name="confirm_password">confirm Password</string>
    <string name="create_new_user_account">Create New User Account</string>
    <string name="select_your_favorite_game">Select your favorite game</string>
    <string name="select_your_console_type">select your console type</string>
    <string name="username">Username</string>
    <string name="Akolyte">Akolyte</string>
    <string name="create_account2">Create Account</string>

    <!--    <string name="gameGroup">GameGroup</string>-->

    <string-array name="gameGroup2">
        <item>Call of Duty</item>
        <item>FIFA</item>
        <item>World of Warcraft</item>
        <item>Minecraft</item>
        <item>League of Legends</item>
    </string-array>

    <string-array name="platformGroup">
        <item>PlayStation 4</item>
        <item>Xbox one</item>
        <item>PC</item>
    </string-array>


</resources>
