<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity"
    android:background="@drawable/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal">

        <ScrollView
            android:layout_width="match_parent"
            android:padding="10sp"
            android:layout_height="match_parent"
            android:scrollbarAlwaysDrawVerticalTrack="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:orientation="vertical"
            android:textAlignment="center"
            android:gravity="center_horizontal">

        <TextView
            android:text="@string/create_new_user_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="monospace"
            android:textSize="24sp" />

        <EditText
            android:layout_marginTop="35dp"
            android:hint="@string/chose_a_username"
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:layout_marginTop="15dp"
            android:hint="@string/prompt_password"
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:layout_marginTop="15dp"
            android:hint="@string/confirm_password"
            android:id="@+id/txtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="15dp"
            android:text="@string/select_your_favorite_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:id="@+id/gameDropDown"/>

        <TextView
            android:layout_marginTop="15dp"
            android:text="@string/select_your_console_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:id="@+id/platformDropDown"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>