<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewLoginActivity"
    android:background="@drawable/background4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingTop="50dp"
        android:textAlignment="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="30sp"
            android:fontFamily="monospace"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/txtLoginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/username"
            android:textColorHint="@color/white"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/txtLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/prompt_password"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/btnLogin"/>

    </LinearLayout>

</RelativeLayout>